tests/baselines/reference/checkJsdocSatisfiesTag3.errors.txt
/a.js(3,7): error TS7006: Parameter 's' implicitly has an 'any' type.


==== /a.js (1 errors) ====
    /** @type {{ f(s: string): void } & Record<string, unknown> }} */
    let obj = /** @satisfies {{ g(s: string): void } & Record<string, unknown>} */ ({
        f(s) { }, // "incorrect" implicit any on 's'
          ~
!!! error TS7006: Parameter 's' implicitly has an 'any' type.
        g(s) { }
    });
    
    // This needs to not crash (outer node is not expression)
    /** @satisfies {{ f(s: string): void }} */ ({ f(x) { } })
    